--- a/static/1v1.html
+++ b/static/1v1.html
@@ -20,19 +20,19 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav"><a class="nav-link" href="/games.html">Games</a></div>
                 <div class="navbar-nav"><a class="nav-link" href="/service/hvtrs8%2F-jqeou0.eivhwb%2Cim%2Febc%2Fnawnahgr%2Chvmn%23roieoolrgd">GBA Emu</a></div>
-                <div class="navbar-nav"><a class="nav-link" href="/disclaimer">Disclaimer</a></div>
+                <div class="navbar-nav"><a class="nav-link" href="/disclaimer.html">Disclaimer</a></div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="jumbotron text-center">
-            <h1 class="display-3">Disclaimer:</h1>
-            <hr>
-        </div>
-        <div class="text-center">
-            <p>Homeworkhelp.ga is in no way responsible whatsoever if you get into trouble for using our services. By using our site you agree that all your actions on this site is in no way our fault and if you are in trouble for using our site thats on you. Happy searching!</p>
-        </div>
+    <div class="jumbotron text-center">
+        <h1 class="display-3">Press the button below to play the game!</h1>
     </div>
+    <div class="container">
+        <form><input class="form-control" type="submit" value="1v1.lol"></form>
+    </div>
+    <script src="/uv/uv.bundle.js"></script>
+    <script src="/uv/uv.config.js"></script>
+    <script src="/index.js"></script>
     <script src="keyp.js"></script>
 </body>
 
