--- a/static/games.html
+++ b/static/games.html
@@ -27,21 +27,58 @@
     <div class="container">
         <div class="jumbotron text-center">
             <h1 class="display-3">Games</h1>
+            <a href="https://discord.gg/nFAsQ64eun">Be sure to join the discord by clicking me!</a>
             <hr>
         </div>
     </div>
     <div class="container">
         <div class="row row-cols-1 row-cols-md-5 g-4">
             <div class="col">
-                <div class="card m2 bg-transparent" style="width: 13rem;"><a href="/service/hvtrs8%2F-1t1%2Clml-"><img class="card-img-top" src="https://www.giantbomb.com/a/uploads/scale_small/45/454004/3160840-1v1.lol%20official%20logo.jpg" alt="1v1.lol"></a>
+                <div class="card m2 bg-transparent" style="width: 13rem;"><a href="/1v1.html"><img class="card-img-top" src="https://www.giantbomb.com/a/uploads/scale_small/45/454004/3160840-1v1.lol%20official%20logo.jpg" alt="1v1.lol"></a>
                     <div class="card-body" style="color: #b7b7b7;">
                         <h5 class="card-title">1v1.lol</h5>
                         <p class="card-text">1v1.lol is a fast paced web based FPS game.</p>
                     </div>
                 </div>
             </div>
+          <div class="col">
+                <div class="card m2 bg-transparent" style="width: 13rem;"><a href="/justfall.html"><img class="card-img-top" src="https://th.bing.com/th/id/OIP.gBUw3nDEDdBvcnJbypR3nwHaHa?pid=ImgDet&rs=1" alt="justfall.lol"></a>
+                    <div class="card-body" style="color: #b7b7b7;">
+                        <h5 class="card-title">Justfall.lol</h5>
+                        <p class="card-text">A fallguys clone made on the web!</p>
+                    </div>
+                </div>
+            </div>
+          <div class="col">
+                <div class="card m2 bg-transparent" style="width: 13rem;"><a href="/paper.html"><img class="card-img-top" src="https://is2-ssl.mzstatic.com/image/thumb/Purple128/v4/76/23/b6/7623b619-0abc-d87e-0b5d-84af189ca809/source/1280x1280bb.jpg" alt="Paper.io"></a>
+                    <div class="card-body" style="color: #b7b7b7;">
+                        <h5 class="card-title">Paper.io</h5>
+                        <p class="card-text">A territorial game where you need to collect the most paper!</p>
+                    </div>
+                </div>
+            </div>
+          <div class="col">
+                <div class="card m2 bg-transparent" style="width: 13rem;"><a href="/shellshock.html"><img class="card-img-top" src="https://opimg.s3.amazonaws.com/2f9f3d3a1a.jpg" alt="shellshock.io"></a>
+                    <div class="card-body" style="color: #b7b7b7;">
+                        <h5 class="card-title">Shell Shockers</h5>
+                        <p class="card-text">A fast paced FPS web-based game... but youre an egg!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                      <div class="card m2 bg-transparent" style="width: 13rem;"><a href="/geforce.html"><img class="card-img-top" src="https://th.bing.com/th/id/OIP.ePDzkGoSxKkGLJ0sjd7aJgHaE7?pid=ImgDet&rs=1" alt="play.gerforcenow.com"></a>
+                          <div class="card-body" style="color: #b7b7b7;">
+                              <h5 class="card-title">GeForce Now</h5>
+                              <p class="card-text">GeForce Now is a cloud based gaming website! You can play all your favorite games from Fortnite  to Brawlhalla!</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
         </div>
-    </div>
+    <script src="uv/uv.bundle.js"></script>
+    <script src="uv/uv.config.js"></script>
+    <script src="index.js"></script>
     <script src="keyp.js"></script>
 </body>
 
