--- a/static/index.html
+++ b/static/index.html
@@ -31,9 +31,12 @@
     <div class="container">
         <form><input class="form-control" type="text" placeholder="Surf the web unblocked!"></form>
         <div class="text-center">
-            <p class="lead">Teacher coming? Press ` to open google classroom!</p>
+            <p class="lead">Teacher coming? Press ` to open panic mode</p>
+            <a class="btn btn-primary" href="/panic.html" role="button">Set Panic Link</a>
         </div>
     </div>
+    <div class="text-center"><a href="/disclaimer.html">By using this site you agree to have read our disclaimer.</a></div>
+    <div class="text-center"><a href="https://discord.gg/nFAsQ64eun">Be sure to join the discord by clicking me!</a></div>
     <script src="uv/uv.bundle.js"></script>
     <script src="uv/uv.config.js"></script>
     <script src="index.js"></script>
