--- a/static/panic.html
+++ b/static/panic.html
@@ -20,20 +20,19 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav"><a class="nav-link" href="/games.html">Games</a></div>
                 <div class="navbar-nav"><a class="nav-link" href="/service/hvtrs8%2F-jqeou0.eivhwb%2Cim%2Febc%2Fnawnahgr%2Chvmn%23roieoolrgd">GBA Emu</a></div>
-                <div class="navbar-nav"><a class="nav-link" href="/disclaimer">Disclaimer</a></div>
+                <div class="navbar-nav"><a class="nav-link" href="/disclaimer.html">Disclaimer</a></div>
             </div>
         </div>
     </div>
+    <div class="jumbotron text-center">
+        <h1 class="display-3">Set the panic link below!</h1>
+        <h1 class="display-3"> MAKE SURE YOU DO NOT HAVE https:// IN YOUR LINK!</h1>
+    </div>
     <div class="container">
-        <div class="jumbotron text-center">
-            <h1 class="display-3">Disclaimer:</h1>
-            <hr>
-        </div>
-        <div class="text-center">
-            <p>Homeworkhelp.ga is in no way responsible whatsoever if you get into trouble for using our services. By using our site you agree that all your actions on this site is in no way our fault and if you are in trouble for using our site thats on you. Happy searching!</p>
-        </div>
+        <form><input class="form-control" type="text" placeholder="Surf the web unblocked!" id="panicForm"></form>
     </div>
     <script src="keyp.js"></script>
+    <script src="panic.js"></script>
 </body>
 
 </html>
